--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.10"
+    "file-loader": "^0.11.2",
+    "react-scripts": "1.0.10",
+    "url-loader": "^0.5.9"
   },
   "scripts": {
     "start": "react-scripts start",
