--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "file-loader": "^0.11.2",
+    "query-string": "^5.0.0",
     "react-scripts": "1.0.10",
     "url-loader": "^0.5.9"
   },
