--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-leaflet": "^1.6.6",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "react-google-recaptcha": "0.9.7",
+    "react-async-script": ">=0.9.1"
   },
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.6",
