modified to support the new text and videos

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "ma-ccc-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "http://resilientma.org/",
+
   "dependencies": {
     "core-js": "^2.5.1",
     "geojson-bounds": "^1.0.1",
