--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "object-path-immutable": "^0.5.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-app-polyfill": "^1.0.5",
     "react-async-script": ">=0.9.1",
     "react-bootstrap": "^0.31.2",
     "react-cookie": "^2.1.4",
